# session-service-grpc

./: Cargo.toml  build.rs
proto/: session-service.proto
src/: lib.rs  session_service.rs
