[package]
name = "session_service_grpc"
version = "0.1.0"
edition = "2021"

[lib]
name = "session_service_grpc"
path = "src/lib.rs"

[dependencies]
env_logger = "0.7.1"
log = "0.4.17"
tonic = { version = "0.8.1", features = ["codegen", "prost"] }
prost = "0.11"
tokio = { version = "1.20.0", features = ["full"] }
tonic-reflection = "0.5.0"

[build-dependencies]
tonic-build = {version = "0.8", features = ["prost"]}
